Fixed novel's creator not showing

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -134,6 +134,19 @@ h2 {
   font-family: 'GoudyBookletter1911', serif;
 }
 
+.dropdown-menu {
+  text-align: left;
+  list-style: none;
+  background-color: rgba(250, 250, 250, 0.7);
+  -webkit-background-clip: padding-box;
+          background-clip: padding-box;
+  border: none;
+  border: none;
+  border-radius: 4px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 #logo {
   height: 100vh;
   background-image: url('https://source.unsplash.com/random/');
